Cache VDA capabilities.

VdaVideoDecoder requests VDA capabilities at each construction. While it
would be possible to plumb GPUInfo to VdaVideoDecoder, the expectation
is that this information will not be computed at startup in the future.
This CL caches the results in GpuVideoDecodeAcceleratorFactory using a
static variable.

Bug: 877803
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I639febd1230763077824006ee6427ba43c5fa529
Reviewed-on: https://chromium-review.googlesource.com/1192138
Reviewed-by: Hirokazu Honda <hiroh@chromium.org>
Commit-Queue: Dan Sanders <sandersd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587293}
Former-commit-id: 5713bd26e3e36fd3b7329fee8aaf6b665152df3f