media/gpu/gpu_video_decode_accelerator_factory.cc
@@ -41,6 +41,55 @@
 
 namespace media {
 
+namespace {
+
+gpu::VideoDecodeAcceleratorCapabilities GetDecoderCapabilitiesInternal(
+    const gpu::GpuPreferences& gpu_preferences,
+    const gpu::GpuDriverBugWorkarounds& workarounds) {
+  if (gpu_preferences.disable_accelerated_video_decode)
+    return gpu::VideoDecodeAcceleratorCapabilities();
+
+  // Query VDAs for their capabilities and construct a set of supported
+  // profiles for current platform. This must be done in the same order as in
+  // CreateVDA(), as we currently preserve additional capabilities (such as
+  // resolutions supported) only for the first VDA supporting the given codec
+  // profile (instead of calculating a superset).
+  // TODO(posciak,henryhsu): improve this so that we choose a superset of
+  // resolutions and other supported profile parameters.
+  VideoDecodeAccelerator::Capabilities capabilities;
+#if defined(OS_WIN)
+  capabilities.supported_profiles =
+      DXVAVideoDecodeAccelerator::GetSupportedProfiles(gpu_preferences,
+                                                       workarounds);
+#elif BUILDFLAG(USE_V4L2_CODEC) || BUILDFLAG(USE_VAAPI)
+  VideoDecodeAccelerator::SupportedProfiles vda_profiles;
+#if BUILDFLAG(USE_V4L2_CODEC)
+  vda_profiles = V4L2VideoDecodeAccelerator::GetSupportedProfiles();
+  GpuVideoAcceleratorUtil::InsertUniqueDecodeProfiles(
+      vda_profiles, &capabilities.supported_profiles);
+  vda_profiles = V4L2SliceVideoDecodeAccelerator::GetSupportedProfiles();
+  GpuVideoAcceleratorUtil::InsertUniqueDecodeProfiles(
+      vda_profiles, &capabilities.supported_profiles);
+#endif
+#if BUILDFLAG(USE_VAAPI)
+  vda_profiles = VaapiVideoDecodeAccelerator::GetSupportedProfiles();
+  GpuVideoAcceleratorUtil::InsertUniqueDecodeProfiles(
+      vda_profiles, &capabilities.supported_profiles);
+#endif
+#elif defined(OS_MACOSX)
+  capabilities.supported_profiles =
+      VTVideoDecodeAccelerator::GetSupportedProfiles();
+#elif defined(OS_ANDROID)
+  capabilities =
+      AndroidVideoDecodeAccelerator::GetCapabilities(gpu_preferences);
+#endif
+
+  return GpuVideoAcceleratorUtil::ConvertMediaToGpuDecodeCapabilities(
+      capabilities);
+}
+
+}  // namespace
+
 // static
 MEDIA_GPU_EXPORT std::unique_ptr<GpuVideoDecodeAcceleratorFactory>
 GpuVideoDecodeAcceleratorFactory::Create(
@@ -77,45 +126,14 @@ MEDIA_GPU_EXPORT gpu::VideoDecodeAcceleratorCapabilities
 GpuVideoDecodeAcceleratorFactory::GetDecoderCapabilities(
     const gpu::GpuPreferences& gpu_preferences,
     const gpu::GpuDriverBugWorkarounds& workarounds) {
-  VideoDecodeAccelerator::Capabilities capabilities;
-  if (gpu_preferences.disable_accelerated_video_decode)
-    return gpu::VideoDecodeAcceleratorCapabilities();
-
-// Query VDAs for their capabilities and construct a set of supported
-// profiles for current platform. This must be done in the same order as in
-// CreateVDA(), as we currently preserve additional capabilities (such as
-// resolutions supported) only for the first VDA supporting the given codec
-// profile (instead of calculating a superset).
-// TODO(posciak,henryhsu): improve this so that we choose a superset of
-// resolutions and other supported profile parameters.
-#if defined(OS_WIN)
-  capabilities.supported_profiles =
-      DXVAVideoDecodeAccelerator::GetSupportedProfiles(gpu_preferences,
-                                                       workarounds);
-#elif BUILDFLAG(USE_V4L2_CODEC) || BUILDFLAG(USE_VAAPI)
-  VideoDecodeAccelerator::SupportedProfiles vda_profiles;
-#if BUILDFLAG(USE_V4L2_CODEC)
-  vda_profiles = V4L2VideoDecodeAccelerator::GetSupportedProfiles();
-  GpuVideoAcceleratorUtil::InsertUniqueDecodeProfiles(
-      vda_profiles, &capabilities.supported_profiles);
-  vda_profiles = V4L2SliceVideoDecodeAccelerator::GetSupportedProfiles();
-  GpuVideoAcceleratorUtil::InsertUniqueDecodeProfiles(
-      vda_profiles, &capabilities.supported_profiles);
-#endif
-#if BUILDFLAG(USE_VAAPI)
-  vda_profiles = VaapiVideoDecodeAccelerator::GetSupportedProfiles();
-  GpuVideoAcceleratorUtil::InsertUniqueDecodeProfiles(
-      vda_profiles, &capabilities.supported_profiles);
-#endif
-#elif defined(OS_MACOSX)
-  capabilities.supported_profiles =
-      VTVideoDecodeAccelerator::GetSupportedProfiles();
-#elif defined(OS_ANDROID)
-  capabilities =
-      AndroidVideoDecodeAccelerator::GetCapabilities(gpu_preferences);
-#endif
-  return GpuVideoAcceleratorUtil::ConvertMediaToGpuDecodeCapabilities(
-      capabilities);
+  // Cache the capabilities so that they will not be computed more than once per
+  // GPU process. It is assumed that |gpu_preferences| and |workarounds| do not
+  // change between calls.
+  // TODO(sandersd): Move cache to GpuMojoMediaClient once
+  // |video_decode_accelerator_capabilities| is removed from GPUInfo.
+  static const gpu::VideoDecodeAcceleratorCapabilities capabilities =
+      GetDecoderCapabilitiesInternal(gpu_preferences, workarounds);
+  return capabilities;
 }
 
 MEDIA_GPU_EXPORT std::unique_ptr<VideoDecodeAccelerator>
